// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailLikersLabel /> should render a <FormattedMessage/> when several likers 1`] = `
<Tag
  as="a"
  icon="cap cap-heart-1 icon--red"
  onClick={[Function]}
  title="test"
>
  <FormattedMessage
    id="proposal.likers.count"
    values={
      Object {
        "num": 2,
      }
    }
  />
</Tag>
`;

exports[`<ProposalDetailLikersLabel /> should render nothing when no likers 1`] = `""`;

exports[`<ProposalDetailLikersLabel /> should render truncated liker name when only one liker 1`] = `
<Tag
  as="a"
  icon="cap cap-heart-1 icon--red"
  onClick={[Function]}
  title="test"
>
  <FormattedMessage
    id="proposal.likers.count"
    values={
      Object {
        "num": 1,
      }
    }
  />
</Tag>
`;
